# ipir-sp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: inspiring-crate.yml
bench-results/2026-05-10-ipir-ypir/: REPORT.md
inspiring/: Cargo.toml  Makefile  README.md  SECURITY.md  roman_notes.md  rust-toolchain.toml
inspiring/.cargo/: config.toml
inspiring/bench/: REPORT.md
inspiring/benches/: pack.rs
inspiring/docs/: inspiring_packing_crate_59430b54.plan.md  spiral-rs-mapping.md
inspiring/fixtures/: MANIFEST.json  small_all_max.json  small_all_zero.json  small_random_seed_1337.json  small_random_seed_42.json  small_single_one_at_15.json  tiny_all_max.json  tiny_all_zero.json  tiny_random_seed_42.json  tiny_single_one_at_3.json
inspiring/fuzz/: Cargo.toml
inspiring/fuzz/fuzz_targets/: pack_no_panic.rs
inspiring/src/: collapse.rs  key_switching.rs  lib.rs  pack.rs  preprocess.rs
inspiring/tests/: aggregate_correctness.rs  collapse_correctness.rs  inspiring_vs_cdks_recursion.rs  noise_theorem2.rs  offline_online_equivalence.rs  pack_roundtrip.rs  python_oracle_match.rs
ipir-sp/: Cargo.toml  MIGRATION.md  README.md
ipir-sp/bench/: REPORT.md
ipir-sp/benches/: end_to_end.rs
ipir-sp/src/: client.rs  lib.rs  modulus_switch.rs  params.rs  serialize.rs  server.rs
ipir-sp/tests/: offline_online_flow.rs
nullifier-pir/src/: backend.rs  http.rs  main.rs
plans/: ipir-sp_on_inspiring_37b742cd.plan.md  ypir-sp_on_inspiring_37b742cd.plan.md
simplepir-kernel/: Cargo.toml
simplepir-kernel/src/: backend.rs  lib.rs  (+2 more)
ypir-sp/: MIGRATION.md  README.md
(+27 files in other folders)
