[workspace]
members = ["inspiring", "ipir-sp", "nullifier-pir", "simplepir-kernel"]
resolver = "2"

[workspace.dependencies]
spiral-rs = { package = "valar-spiral-rs", git = "https://github.com/valargroup/spiral-rs.git", rev = "6f5b66c6a5a639827c6486c59d31c7ec2d4399a8" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true
