[package]
name = "inspiring-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
inspiring = { path = ".." }
libfuzzer-sys = "0.4"
spiral-rs = { package = "valar-spiral-rs", git = "https://github.com/valargroup/spiral-rs.git", rev = "6f5b66c6a5a639827c6486c59d31c7ec2d4399a8" }

[[bin]]
name = "pack_no_panic"
path = "fuzz_targets/pack_no_panic.rs"
test = false
doc = false
bench = false
